# paynym-generator

./: .env  Cargo.toml  readme.md
src/: environment.rs  error.rs  lib.rs
src/paynym/: mod.rs  notification.rs
tests/: paynym.rs
