[package]
name = "paynym-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bitcoin related
bitcoin = "0.31.2"
bip39 = "2.0.0"
sha2 = "0.10.8"

# Environment
dotenv = "0.15.0"
envy = "0.4.2"

# Others
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }


